fix: social items alignement

--- a/src/components/commons.css
+++ b/src/components/commons.css
@@ -99,8 +99,7 @@ a.active {
   margin: 0 0 1rem;
   padding: 0;
   list-style: none;
-  display: flex;
-  justify-content: center
+  display: block;
 }
 
 .social li {
