--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -9,6 +9,7 @@
   padding: var(--vspace) var(--hspace);
 }
 
+.right,
 .copyright {
   text-align: center;
 }
